--- a/email/css/web.css
+++ b/email/css/web.css
@@ -80,11 +80,64 @@
   }
 
   hr {
-    width: 85%;
+    width: 373px;
     color: #F0F0F0;
     border-color: #F0F0F0;
     border-style: solid;
     margin: 0;
+  }
+
+  .detail-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 430px;
+    flex-direction: column;
+    width: 373px;
+  }
+
+  .detail {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    height: 70px;
+  }
+
+  .detail-icon-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    height: 95px;
+  }
+
+  .detail-icon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .detail-text-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    height: 95px;
+  }
+
+  .detail-title {
+    font-size: 13px;
+    margin: 0;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 15px;
+  }
+
+  .detail-text {
+    font-size: 13px;
+    margin: 0;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 15px;
+    line-height: 19px;
   }
 
   .social-icons-container {
