mobile touch ups

--- a/email/css/web.css
+++ b/email/css/web.css
@@ -79,6 +79,10 @@
     text-decoration: underline;
   }
 
+  .get-template-button:hover {
+    cursor: pointer;
+  }
+
   hr {
     width: 373px;
     color: #F0F0F0;
