--- a/email/css/web.css
+++ b/email/css/web.css
@@ -15,7 +15,7 @@
     width: 430px;
     height: 730px;
     background-color: white;
-    border-radius: 4px;
+    border-radius: 5px;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -93,26 +93,26 @@
 
   .detail-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 430px;
     flex-direction: column;
     width: 373px;
   }
 
   .detail {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-direction: row;
-    height: 70px;
+    height: 53px;
+    margin-bottom: 10px;
   }
 
   .detail-icon-container {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    height: 95px;
+    height: 53px;
   }
 
   .detail-icon {
@@ -124,7 +124,7 @@
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    height: 95px;
+    height: 53px;
   }
 
   .detail-title {
@@ -142,6 +142,25 @@
     font-family: Arial, Helvetica, sans-serif;
     padding-left: 15px;
     line-height: 19px;
+  }
+
+  .contact-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+
+  .contact-text {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    margin: 0;
+  }
+
+  .contact-email {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
   }
 
   .social-icons-container {
