--- a/email/css/web.css
+++ b/email/css/web.css
@@ -50,7 +50,7 @@
   }
 
   .pitch-container {
-    height: 140px;
+    height: 120px;
     width: 430px;
     display: flex;
     justify-content: center;
@@ -62,6 +62,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     text-align: center;
+    margin-top: 0px;
     padding-left: 28px;
     padding-right: 28px;
     line-height: 22px;
@@ -99,7 +100,7 @@
     width: 373px;
   }
 
-  .detail {
+  .detail  {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -125,6 +126,7 @@
     justify-content: flex-start;
     flex-direction: column;
     height: 53px;
+    width: 333px;
   }
 
   .detail-title {
