--- a/email/css/mobile.css
+++ b/email/css/mobile.css
@@ -1,5 +1,4 @@
-/* mobile */
-@media (max-width: 600px) {
+/*@media (max-width: 600px) {
   .wrapper {
     width: 250px;
     height: 990px;
@@ -200,4 +199,4 @@
     color: #6f6e6e;
   }
 
-}
+}*/
