--- a/email/css/web.css
+++ b/email/css/web.css
@@ -1,8 +1,9 @@
 /* desktop */
-@media (min-width: 600px) {
+
   .wrapper {
-    width: 560px;
-    height: 900px;
+    width: 100%;
+    min-width: 250px;
+    height: auto;
     background-color: #F0F0F0;
     box-shadow: 1px 1px 5px 2px #b8bdbd;
     display: flex;
@@ -11,11 +12,17 @@
     flex-direction: column;
   }
 
+  .top-logo {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
   .content-container {
-    width: 430px;
-    height: 730px;
+    width: 80%;
+    min-width: 250px;
+    height: auto;
     background-color: white;
-    border-radius: 5px;
+    border-radius: 3px;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -27,45 +34,52 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 85px;
+    height: auto;
+    width: 100%;
+    padding-bottom: 10px;
   }
 
   .title {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 19px;
+    font-family: Helvetica, sans-serif;
+    font-size: 18px;
     font-weight: bolder;
     margin-bottom: 15px;
+    padding-right: 40px;
+    padding-left: 40px;
   }
 
   .subtitle {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    font-family: Helvetica, sans-serif;
+    font-size: 13px;
     font-weight: normal;
     margin-top: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .main-image {
-    height: 242px;
-    width: 430px;
+    height: auto;
+    width: 100%;
+    min-width: 205px;
+    padding-bottom: 10px;
   }
 
   .pitch-container {
-    height: 120px;
-    width: 430px;
+    height: auto;
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 10px;
   }
 
   .pitch-text {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
     font-size: 13px;
     text-align: center;
     margin-top: 0px;
-    padding-left: 28px;
-    padding-right: 28px;
-    line-height: 22px;
+    line-height: 20px;
   }
 
   .get-template-button {
@@ -82,22 +96,26 @@
 
   .get-template-button:hover {
     cursor: pointer;
+    opacity: 0.9;
   }
 
   hr {
-    width: 373px;
+    width: 80%;
     color: #F0F0F0;
     border-color: #F0F0F0;
     border-style: solid;
     margin: 0;
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
 
   .detail-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    width: 373px;
+    width: 90%;
+    height: auto;
   }
 
   .detail  {
@@ -105,15 +123,18 @@
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
-    height: 53px;
+    height: auto;
+    width: 90%;
     margin-bottom: 10px;
+    margin-top: 10px;
   }
 
   .detail-icon-container {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    height: 53px;
+    height: 100%;
+    align-self: stretch;
   }
 
   .detail-icon {
@@ -125,8 +146,8 @@
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    height: 53px;
-    width: 333px;
+    height: auto;
+    width: 100%;
   }
 
   .detail-title {
@@ -152,12 +173,16 @@
     align-items: center;
     flex-direction: column;
     margin-bottom: 10px;
+    width: 100%;
+    height: auto;
+    padding-bottom: 10px;
   }
 
   .contact-text {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     margin: 0;
+    margin-bottom: 5px;
   }
 
   .contact-email {
@@ -170,6 +195,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    padding-top: 10px;
   }
 
   .social-icon {
@@ -189,7 +215,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 360px;
+    width: 90%;
+    height: auto;
   }
 
   .footer-text {
@@ -205,4 +232,3 @@
   .subscription-link:hover {
     color: #6f6e6e;
   }
-}
