--- a/theme/style.css
+++ b/theme/style.css
@@ -50,6 +50,7 @@ html {
 	font-family: sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust:     100%;
+	margin: 0px;
 }
 
 body {
@@ -891,4 +892,183 @@ object {
 
 .gallery-caption {
 	display: block;
+}
+
+.team-member {
+	display: flex;
+	align-self: flex-start;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: row;
+	width: 100%;
+	padding: 3px;
+	border: 1px solid #cccccc;
+	margin-bottom: 5px;
+	border-radius: 2px;
+}
+
+.team-member:hover {
+	background-color: #f9f6f6;
+}
+
+.team-pic {
+	align-self: flex-start;
+}
+
+.team-list-container {
+	display: flex;
+	justify-content: space-around;
+	flex-direction: column;
+	width: 95%;
+}
+
+.member-container {
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-direction: row;
+	width: auto;
+}
+
+.member {
+	margin: 0;
+	font-family: 'Karla', sans-serif;
+}
+
+.member-form {
+	margin-bottom: 10px;
+	font-family: 'Karla', sans-serif;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: column;
+}
+
+.input {
+	background-color: #dedbdb;
+	height: 20px;
+	border-style: solid;
+	border-color: rgb(204, 204, 204);
+	border-radius: 3px;
+}
+
+#summary-change {
+	background-color: #dedbdb;
+	height: 100px;
+	width: 300px;
+	border-style: solid;
+	border-color: rgb(204, 204, 204);
+	border-radius: 3px;
+}
+
+.summary-container {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	flex-direction: column;
+	width: 70%;
+	height: auto;
+	margin-bottom: 5px;
+}
+
+.summary-title {
+	margin: 0;
+	font-family: 'Karla', sans-serif;
+	font-size: 18px;
+	padding-right: 10px;
+}
+
+.summary {
+	margin: 0px;
+	font-family: 'Karla', sans-serif;
+	text-align: center;
+}
+
+li.page-item {
+	padding-right: 2px;
+}
+
+.site-main {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border-bottom: solid 1px black;
+	border-top: solid 1px black;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: column;
+}
+
+.main-navigation {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: row;
+	width: 50%;
+}
+
+.menu {
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: row;
+}
+
+.menu ul {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: row;
+	width: 100%;
+}
+
+.menu ul li {
+	padding: 5px;
+}
+
+.delete {
+	align-self: center;
+	padding-left: 10px;
+}
+
+.delete-button {
+	background-color: #f9f6f6 !important;
+	margin-right: 2px;
+}
+
+#lower-input {
+	margin-bottom: 5px;
+}
+
+.right {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
+}
+
+.inner-member {
+	display: flex;
+	justify-content: flex-start;
+	flex-direction: column;
+	margin-left: 2px;
+}
+
+input {
+	background-color: #f9f6f6 !important;
+}
+
+.summary-form {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	height: auto;
+}
+
+.summary-button {
+	margin-top: 5px;
 }
